turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:14: error: type mismatch;
 found   : Int
 required: java.awt.Color
  coupstylo(e(0))
             ^